mobile menu z-index fix

--- a/src/stylus/blocks/_mob-menu.styl
+++ b/src/stylus/blocks/_mob-menu.styl
@@ -7,7 +7,7 @@
   width 100%
   height 100vh
   background-color rgba(0,0,0,0.95)
-  z-index: 20
+  z-index: 20000
   padding 3rem 1.2rem
   transition: .5s
   will-change: bottom
